Fixed container-based auth to work with non-ascii logins

--- a/src/main/resources/jsp_en.properties
+++ b/src/main/resources/jsp_en.properties
@@ -11,3 +11,4 @@ main.through=Through
 main.title=My first jsp page (response)
 login.enter=Login...
 main.currentlogin=You are logged in as
+login.retry=Login error, please try again
