Solved "unused" properties problems

--- a/src/main/resources/jsp_ru.properties
+++ b/src/main/resources/jsp_ru.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 main.beanreport=\u041E\u0442\u0432\u0435\u0442 \u043E\u0442 timer bean:
 main.header=\u041C\u043E\u044F \u043F\u0435\u0440\u0432\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430 \u043D\u0430 jsp (\u043E\u0442\u0432\u0435\u0442 \u0441\u0435\u0440\u0432\u043B\u0435\u0442\u0430)
 login.password=\u041F\u0430\u0440\u043E\u043B\u044C:
