Request paramener fix. User details jsp overhaul.

--- a/src/main/resources/jsp_en.properties
+++ b/src/main/resources/jsp_en.properties
@@ -5,7 +5,7 @@ login.password=Password:
 login.title=Login page
 login.caption=Please log into the system
 login.username=User name:
-main.newsession=Start new session
+main.logout=Log out
 main.selectedlocale=User-selected locale
 main.selecttz=To know time, select timezone:
 main.through=Through
@@ -29,3 +29,10 @@ login.badPassword=Incorrect password
 alert.unTooLong=User name too long (50 chars max)
 alert.unTooShort=User name too short (4 chars min)
 register.userExists=Username already taken
+details.title=User details
+details.unconfirmed=You haven't confirmed your user details. Please review and update your data.
+details.update=Update user data
+details.gotomain=Go to main page...
+details.fullname=Full name
+details.email=Email
+details.header=Your details
