--- a/src/main/resources/jsp_ru.properties
+++ b/src/main/resources/jsp_ru.properties
@@ -34,5 +34,5 @@ details.unconfirmed=\u0412\u044B \u043D\u0435\u0434\u0430\u0432\u043D\u043E \u04
 details.update=\u041E\u0431\u043D\u043E\u0432\u0438\u0442\u044C \u0434\u0430\u043D\u043D\u044B\u0435
 details.gotomain=\u041D\u0430 \u0433\u043B\u0430\u0432\u043D\u0443\u044E \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0443...
 details.fullname=\u041F\u043E\u043B\u043D\u043E\u0435 \u0438\u043C\u044F
-details.email=Email
+details.email=Email-\u0430\u0434\u0440\u0435\u0441
 details.header=\u0412\u0430\u0448\u0438 \u0434\u0430\u043D\u043D\u044B\u0435
