Multiple convIds in one SELECT

--- a/src/main/resources/jsp_en.properties
+++ b/src/main/resources/jsp_en.properties
@@ -1,6 +1,6 @@
 # suppress inspection "UnusedProperty" for whole file
 main.beanreport=This is what timer bean reports:
-main.header=My first jsp page (servlet response)
+main.header=Welcome to my green network!
 login.password=Password:
 login.title=Login page
 login.caption=Please log into the system
@@ -30,9 +30,12 @@ alert.unTooLong=User name too long (50 chars max)
 alert.unTooShort=User name too short (4 chars min)
 register.userExists=Username already taken
 details.title=User details
-details.unconfirmed=You haven't confirmed your user details. Please review and update your data.
+details.unconfirmed=You haven't confirmed your user details. Please review your data.
 details.update=Update user data
 details.gotomain=Go to main page...
 details.fullname=Full name
 details.email=Email
 details.header=User details
+main.mymessages=My messages
+details.find.user=Find user...
+details.search=Search
