ALPHA VERSION COMPLETE

--- a/src/main/resources/jsp_en.properties
+++ b/src/main/resources/jsp_en.properties
@@ -41,3 +41,20 @@ details.find.user=Find user...
 details.search=Search
 details.users.found=Users found:
 details.show.friends=Show all friends
+details.addfriend=Add to friends
+details.remfriend=Remove from friends
+filter.all=All
+filter.friends=Friends
+filter.non.friends=Non-friends
+loading.messages=Loading messages...
+loading.users=Loading users...
+main.message.view=Message view
+main.users=Users
+main.warn.unread=You have unread messages!
+message.button.cancel=Cancel
+message.button.close=Close
+message.button.delete=Delete
+message.button.private=Private message
+message.button.reply=Reply
+message.button.send=Send
+details.filter=Filter
