Main page bundle

--- a/src/main/resources/jsp_en.properties
+++ b/src/main/resources/jsp_en.properties
@@ -58,3 +58,6 @@ message.button.private=Private message
 message.button.reply=Reply
 message.button.send=Send
 details.filter=Filter
+main.message.sorting=Message sorting
+main.sorting.chain=Reply chain
+main.sorting.time=Time
