--- a/src/main/resources/jsp_ru.properties
+++ b/src/main/resources/jsp_ru.properties
@@ -58,3 +58,6 @@ message.button.private=\u041B\u0438\u0447\u043D\u043E\u0435 \u0441\u043E\u043E\u
 message.button.reply=\u041E\u0442\u0432\u0435\u0442\u0438\u0442\u044C
 message.button.send=\u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C
 details.filter=\u0424\u0438\u043B\u044C\u0442\u0440
+main.message.sorting=\u0421\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u043A\u0430
+main.sorting.chain=\u0426\u0435\u043F\u043E\u0447\u043A\u0430\u043C\u0438
+main.sorting.time=\u041F\u043E \u0432\u0440\u0435\u043C\u0435\u043D\u0438
