Writing and replying OK

--- a/src/main/resources/jsp_en.properties
+++ b/src/main/resources/jsp_en.properties
@@ -55,9 +55,23 @@ message.button.cancel=Cancel
 message.button.close=Close
 message.button.delete=Delete
 message.button.private=Private message
-message.button.reply=Reply
 message.button.send=Send
 details.filter=Filter
 main.message.sorting=Message sorting
 main.sorting.chain=Reply chain
 main.sorting.time=Time
+conv.table.created.at=At
+conv.table.created.by=Created by
+conv.table.description=Description
+conv.table.name=Name
+loading.conversations=Loading conversations...
+main.conv.all=All watched
+main.conv.filter=Conversations
+main.conv.my=Started by me
+main.conversation.header=Conversation:
+main.conversation.participants=Participants:
+main.conversations=My conversations
+main.new.message=Write new
+main.private.header=Private messages
+main.time=Time
+message.recip=To:
