--- a/src/main/resources/jsp_ru.properties
+++ b/src/main/resources/jsp_ru.properties
@@ -55,9 +55,23 @@ message.button.cancel=\u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
 message.button.close=\u0417\u0430\u043A\u0440\u044B\u0442\u044C
 message.button.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
 message.button.private=\u041B\u0438\u0447\u043D\u043E\u0435 \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435
-message.button.reply=\u041E\u0442\u0432\u0435\u0442\u0438\u0442\u044C
 message.button.send=\u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C
 details.filter=\u0424\u0438\u043B\u044C\u0442\u0440
 main.message.sorting=\u0421\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u043A\u0430
 main.sorting.chain=\u0426\u0435\u043F\u043E\u0447\u043A\u0430\u043C\u0438
 main.sorting.time=\u041F\u043E \u0432\u0440\u0435\u043C\u0435\u043D\u0438
+conv.table.created.at=\u0412\u0440\u0435\u043C\u044F
+conv.table.created.by=\u0421\u043E\u0437\u0434\u0430\u0442\u0435\u043B\u044C
+conv.table.description=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+conv.table.name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
+loading.conversations=\u0417\u0430\u0433\u0440\u0443\u0437\u043A\u0430 \u0431\u0435\u0441\u0435\u0434...
+main.conv.all=\u0421\u043E \u043C\u043D\u043E\u0439
+main.conv.filter=\u0411\u0435\u0441\u0435\u0434\u044B
+main.conv.my=\u041D\u0430\u0447\u0430\u0442\u044B\u0435 \u043C\u043D\u043E\u0439
+main.conversation.header=\u0411\u0435\u0441\u0435\u0434\u0430:
+main.conversation.participants=\u0423\u0447\u0430\u0441\u0442\u043D\u0438\u043A\u0438:
+main.conversations=\u041C\u043E\u0438 \u0431\u0435\u0441\u0435\u0434\u044B
+main.new.message=\u041D\u0430\u043F\u0438\u0441\u0430\u0442\u044C
+main.private.header=\u041B\u0438\u0447\u043D\u044B\u0435 \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u044F
+main.time=\u0412\u0440\u0435\u043C\u044F
+message.recip=\u041A\u043E\u043C\u0443:
