Send/get message fix

--- a/src/main/resources/jsp_en.properties
+++ b/src/main/resources/jsp_en.properties
@@ -75,3 +75,8 @@ main.new.message=Write new
 main.private.header=Private messages
 main.time=Time
 message.recip=To:
+message.button.reply=Reply
+conv.new.show=Create new
+conv.new.name=Enter conversation name
+conv.new.desc=Enter description for your new conversation
+conv.button.create=Create conversation
