Invitation counting and warning

--- a/src/main/resources/jsp_en.properties
+++ b/src/main/resources/jsp_en.properties
@@ -80,3 +80,7 @@ conv.new.show=Create new
 conv.new.name=Enter conversation name
 conv.new.desc=Enter description for your new conversation
 conv.button.create=Create conversation
+conv.button.accept=Accept
+conv.button.decline=Decline
+main.conv.invites=Invitations
+main.warn.invites=You have invitations!
