--- a/src/main/resources/jsp_en.properties
+++ b/src/main/resources/jsp_en.properties
@@ -84,4 +84,5 @@ conv.button.accept=Accept
 conv.button.decline=Decline
 main.conv.invites=Invitations
 main.warn.invites=You have invitations!
-conv.ban.confirm=Ban user $1 from conversation \u201c$2\u201d?
+conv.ban.confirm=Ban user $1 from conversation \u201C$2\u201D?
+message.delete.confirm=Delete message?
