--- a/src/main/resources/jsp_en.properties
+++ b/src/main/resources/jsp_en.properties
@@ -86,3 +86,5 @@ main.conv.invites=Invitations
 main.warn.invites=You have invitations!
 conv.ban.confirm=Ban user $1 from conversation \u201C$2\u201D?
 message.delete.confirm=Delete message?
+conv.button.invite=Invite
+conv.invite=Invite participants:
